# pokeAPI

./: .coveragerc  .flake8  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: __init__.py
src/api/: berry.py  utils.py
src/models/: models.py
src/server/: berry_stats.py  server.py
tests/: test_berry.py  test_models.py  test_utils.py
